--- a/src/@ioncore/theme/Input/Input.css
+++ b/src/@ioncore/theme/Input/Input.css
@@ -4,7 +4,6 @@
   padding: 10px;
   box-sizing: border-box;
   font-size: 16px;
-  margin: 5px;
 }
 
 .ic-provider--dark .ic-Input {
@@ -15,11 +14,13 @@
 
 .ic-Input-wrapper {
   display: inline-block;
+  padding: 4px;
+  box-sizing: border-box;
 }
 
 .ic-Input-label {
   display: block;
-  margin: 4px;
+  margin-bottom: 4px;
   color: #333;
   font-weight: bold;
   text-align: left;
